# material-python-template

./: README.md  main.py  pyproject.toml
ui/: main.slint
